# uatk-aspics

./: .gitignore  README.md  abc-manchester.db  convert_snapshot.py  environment.yml  gui.py  headless.py  imgui.ini  pyproject.toml
aspics/: activity.py  buffers.py  events.py  initial_cases.py  inspector.py  load_msoa_locations.py  loader.py  params.py  params_old.py  personal_risk.py  personal_risk2.py  simulator.py  snapshot.py
aspics/doc/: model_design.md
aspics/kernels/: ramp_ua.cl  ramp_ua_new.cl
calibration/: abc-manchester.db  abc_notebook.ipynb  loader.py  run_aspics.py  run_model.py  run_model_test.py  simulator.py
calibration/baseline_data/: Rutland_cases.csv  gam_manchester_cases.csv  gam_rutland_cases.csv  manchester_cases.csv
config/: Bristol.yml  Input_Bristol.csv  Input_Manchester.csv  Input_Rutland.csv  Manchester.yml  Rutland.yml  Rutland_Test.yml  TwoCounties.yml  new_parameters.yml  templateHS.yml
docs/: developer_guide.md  usage_guide.md
model/: pyproject.toml
scripts/: README.md  events.R
